--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
   </body>
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-  <script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
-    const clicks = React.createElement(
-      "h1",
-      {
-        onMouseEnter: () => console.log("mouse enter"),
-      },
-      "Hello I'm title"
+    const clicks = (
+      <h1 id="title" onMouseEnter={() => console.log("mouse entered")}>
+        Hello I'm title.
+      </h1>
     );
-    const btn = React.createElement(
-      "button",
-      {
-        onClick: () => console.log("clicked"),
-      },
-      "click me"
+    const btn11 = (
+      <button style={{ backgroundColor: "tomato" }} onClick={() => console.log("im clicked")}>
+        click me
+      </button>
     );
-    const div = React.createElement("div", null, [clicks, btn]);
+
+    const div = React.createElement("div", null, [clicks, btn11]);
 
     // ReactDOM.render(clicks, root)
     ReactDOM.render(div, root);
