--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-
   <script type="text/babel">
     const root = document.getElementById("root");
     function App() {
       const [cnt, setCounter] = React.useState(0);
       const onClick = () => {
-        setCounter(cnt+1)
+        setCounter(cnt + 1);
       };
       return (
         <div>
