--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
   <script type="text/babel">
     const root = document.getElementById("root");
     function App() {
-      const [minutes, setMinutes] = React.useState();
+      const [minutes, setMinutes] = React.useState(0);
       const onChange = (event) => {
         setMinutes(event.target.value);
       };
+      const reset = () => setMinutes(0);
+
       return (
         <div>
           <h1>Super Converter</h1>
-          <label htmlFor="minutes">minutes</label>
-          <input value={minutes} id="minutes" placeholder="minutes" onChange={onChange} type="number" />
+          <div>
+            <label htmlFor="minutes">minutes</label>
+            <input value={minutes} id="minutes" placeholder="minutes" onChange={onChange} type="number" />
+          </div>
           <h4>you want to convert {minutes}</h4>
-          <label htmlFor="hours">hours</label>
-          <input id="hours" placeholder="Hours" type="number" />
+          <div>
+            <label htmlFor="hours">hours</label>
+            <input value={Math.round(minutes / 60)} id="hours" placeholder="Hours" type="number" disabled />
+          </div>
+          <button onClick={reset}>Reset</button>
         </div>
       );
     }
