--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
   <script type="text/babel">
     const root = document.getElementById("root");
     function App() {
-      const [minutes, setMinutes] = React.useState(0);
+      const [amount, setAmount] = React.useState(0);
+      const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
-        setMinutes(event.target.value);
+        setAmount(event.target.value);
       };
-      const reset = () => setMinutes(0);
-
+      const reset = () => setAmount(0);
+      const flip = () => {
+        reset();
+        setFlipped((current) => !current);
+      };
       return (
         <div>
           <h1>Super Converter</h1>
           <div>
             <label htmlFor="minutes">minutes</label>
-            <input value={minutes} id="minutes" placeholder="minutes" onChange={onChange} type="number" />
+            <input value={flipped ? amount * 60 : amount} id="minutes" placeholder="minutes" onChange={onChange} type="number" disabled={flipped} />
           </div>
-          <h4>you want to convert {minutes}</h4>
+          <h4>you want to convert {amount}</h4>
           <div>
             <label htmlFor="hours">hours</label>
-            <input value={Math.round(minutes / 60)} id="hours" placeholder="Hours" type="number" disabled />
+            <input value={flipped ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!flipped} />
           </div>
-          <button onClick={reset}>Reset</button>
+          <button onClick={reset}>Reset!🔴</button>
+          <button onClick={flip}>Flip!🔄</button>
         </div>
       );
     }
