--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
-    const root = document.getElementById("root");
-    function App() {
+    function MinutesToHours() {
       const [amount, setAmount] = React.useState(0);
       const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
@@ -39,6 +38,35 @@
       );
     }
 
+    function App() {
+      const [amount, setAmount] = React.useState(0);
+      const [flipped, setFlipped] = React.useState(false);
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      };
+      const reset = () => setAmount(0);
+      const flip = () => {
+        reset();
+        setFlipped((current) => !current);
+      };
+      return (
+        <div>
+          <h1>Super Converter</h1>
+          <div>
+            <label htmlFor="minutes">minutes</label>
+            <input value={flipped ? amount * 60 : amount} id="minutes" placeholder="minutes" onChange={onChange} type="number" disabled={flipped} />
+          </div>
+          <h4>you want to convert {amount}</h4>
+          <div>
+            <label htmlFor="hours">hours</label>
+            <input value={flipped ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!flipped} />
+          </div>
+          <button onClick={reset}>Reset!🔴</button>
+          <button onClick={flip}>Flip!🔄</button>
+        </div>
+      );
+    }
+    const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
   </script>
 </html>
