--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       };
       return (
         <div>
-          <h1>Super Converter</h1>
           <div>
             <label htmlFor="minutes">minutes</label>
             <input value={flipped ? amount * 60 : amount} id="minutes" placeholder="minutes" onChange={onChange} type="number" disabled={flipped} />
@@ -37,32 +36,24 @@
         </div>
       );
     }
-
+    function KmToMiles() {
+      return <h3> KM 2 M </h3>;
+    }
     function App() {
-      const [amount, setAmount] = React.useState(0);
-      const [flipped, setFlipped] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      };
-      const reset = () => setAmount(0);
-      const flip = () => {
-        reset();
-        setFlipped((current) => !current);
+      const [index, setIndex] = React.useState(0);
+      const onSelect = (event) => {
+        setIndex(event.target.value);
       };
       return (
         <div>
           <h1>Super Converter</h1>
-          <div>
-            <label htmlFor="minutes">minutes</label>
-            <input value={flipped ? amount * 60 : amount} id="minutes" placeholder="minutes" onChange={onChange} type="number" disabled={flipped} />
-          </div>
-          <h4>you want to convert {amount}</h4>
-          <div>
-            <label htmlFor="hours">hours</label>
-            <input value={flipped ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!flipped} />
-          </div>
-          <button onClick={reset}>Reset!🔴</button>
-          <button onClick={flip}>Flip!🔄</button>
+          <select value={index} onChange={onSelect}>
+            <option value="0">Select plz</option>
+            <option value="1">Minutes & Hours 🕑</option>
+            <option value="2">Km & Miles 🚗</option>
+          </select>
+          {index === "1" ? <MinutesToHours /> : null}
+          {index === "2" ? <KmToMiles /> : null}
         </div>
       );
     }
