--- a/index.html
+++ b/index.html
@@ -9,75 +9,29 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
-    function MinutesToHours() {
-      const [amount, setAmount] = React.useState(0);
-      const [flipped, setFlipped] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      };
-      const reset = () => setAmount(0);
-      const flip = () => {
-        reset();
-        setFlipped((current) => !current);
-      };
+    function Btn({ sendingText, bgc }) {
+      //props는 object
       return (
-        <div>
-          <div>
-            <label htmlFor="minutes">minutes</label>
-            <input value={flipped ? amount * 60 : amount} id="minutes" placeholder="minutes" onChange={onChange} type="number" disabled={flipped} />
-          </div>
-          <h4>you want to convert {amount}</h4>
-          <div>
-            <label htmlFor="hours">hours</label>
-            <input value={flipped ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!flipped} />
-          </div>
-          <button onClick={reset}>Reset!🔴</button>
-          <button onClick={flip}>Flip!🔄</button>
-        </div>
+        <button
+          style={{
+            backgroundColor: bgc,
+            color: "white",
+            padding: "10px 20px",
+            border: 0,
+            borderRadius: 10,
+            margin: "10px",
+          }}
+        >
+          {sendingText}
+        </button>
       );
     }
-    function KmToMiles() {
-      const [amount, setAmount] = React.useState(0);
-      const [flipped, setFlipped] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      };
-      const reset = () => setAmount(0);
-      const flip = () => {
-        reset();
-        setFlipped((current) => !current);
-      };
-      return (
-        <div>
-          <div>
-            <label htmlFor="Km">Km</label>
-            <input value={flipped ? amount * 1.60934 : amount} id="Km" placeholder="Km" onChange={onChange} type="number" disabled={flipped} />
-          </div>
-          <h4>you want to convert {amount}</h4>
-          <div>
-            <label htmlFor="Miles">Miles</label>
-            <input value={flipped ? amount : amount * 0.621371} id="Miles" placeholder="Miles" type="number" onChange={onChange} disabled={!flipped} />
-          </div>
-          <button onClick={reset}>Reset!🔴</button>
-          <button onClick={flip}>Flip!🔄</button>
-        </div>
-      );
-    }
+
     function App() {
-      const [index, setIndex] = React.useState(0);
-      const onSelect = (event) => {
-        setIndex(event.target.value);
-      };
       return (
         <div>
-          <h1>Super Converter</h1>
-          <select value={index} onChange={onSelect}>
-            <option value="0">Select plz</option>
-            <option value="1">Minutes & Hours 🕑</option>
-            <option value="2">Km & Miles 🚗</option>
-          </select>
-          {index === "1" ? <MinutesToHours /> : null}
-          {index === "2" ? <KmToMiles /> : null}
+          <Btn sendingText="Save Changes" bgc="tomato" />
+          <Btn sendingText="Continue" bgc="blue" />
         </div>
       );
     }
