--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
-    function Btn({ sendingText, bgc }) {
+    function Btn({ sendingText, activeWhenClick }) {
       //props는 object
+      console.log(sendingText, "was rendered");
       return (
         <button
+          onClick={activeWhenClick}
           style={{
-            backgroundColor: bgc,
+            backgroundColor: "tomato",
             color: "white",
             padding: "10px 20px",
             border: 0,
@@ -26,12 +28,14 @@
         </button>
       );
     }
-
+    const MemorizedBtn = React.memo(Btn);
     function App() {
+      const [value, setValue] = React.useState("Save Changes");
+      const changeValue = () => setValue("Revert Changes");
       return (
         <div>
-          <Btn sendingText="Save Changes" bgc="tomato" />
-          <Btn sendingText="Continue" bgc="blue" />
+          <MemorizedBtn sendingText={value} activeWhenClick={changeValue} />
+          <MemorizedBtn sendingText="Continue" />
         </div>
       );
     }
