--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
     function Btn({ sendingText, activeWhenClick }) {
       //props는 object
@@ -28,6 +28,9 @@
         </button>
       );
     }
+    Btn.propTypes = {
+      text: PropTypes.string.isRequired,
+    };
     const MemorizedBtn = React.memo(Btn);
     function App() {
       const [value, setValue] = React.useState("Save Changes");
